# Que_generation

./: README.md
English/: quizbot.ipynb
Maths/: AI_format.py  API_Endpoint.py  Mathematics_QA.py
Programming/back-end/: README.md  pyproject.toml  test.py  testjava.py  testjs.py  testpy.py
Programming/back-end/generator/: apps.py  automatic_validation.py  coding_validator.py  mcq_validator.py  models.py  sandbox.py  serializers.py  services.py  short_answer_validator.py  tasks.py  urls.py  views.py
Programming/back-end/project/: settings.py  urls.py
SE/: FlaskAPI.py  Generate.py  SE_QA.py  transformers_test.py
